correct spacing

--- a/src/Pages/Home/Dashboard/Result/CorrectioPage.css
+++ b/src/Pages/Home/Dashboard/Result/CorrectioPage.css
@@ -16,7 +16,7 @@
     align-items: center;
   }
 
-h3 {
+.correction-page h3 {
   text-align: center;
   margin: 30px;
   padding-top: 20px;
